compiler/testData/diagnostics/tests/exposed/nestedInheritance.diag.txt
/nestedInheritance.kt:12:25: error: 'public' sub-interface exposes its 'internal' supertype containing declaration Outer
    interface Derived : Base
                        ^^^^

